# qsharp

./: .gitignore  .gitmodules  DefaulModule.cs  DefaultModuleManager.cs  HelloModule.cs  INativeModule.cs  LICENSE  NativeMethods.cs  NativeMethods.quickjs.g.cs  Program.cs  QSharp.csproj  QSharp.sln  QuickJsExtension.cs  README.md  Utils.cs
Native/: ErrorInfo.cs  JSAtom.cs  JSCFunctionEnum.cs  JSCFunctionListEntry.cs  JSCallFlags.cs  JSDefType.cs  JSEvalFlags.cs  JSGetPropertyNamesFlags.cs  JSParseJsonFlags.cs  JSPropertyFlags.cs  JSReaderFlags.cs  JSRefCountHeader.cs  JSTag.cs  JSValue.cs  JSWriterFlags.cs  JsContext.cs  NativeMethod.extension.cs  NativeMethods.quickjs.g.cs  NativeMethods.system.cs  QuickJSException.cs  Utils.cs
Properties/: launchSettings.json
Test/: hello.js  test.js
Tool/StringConveter/: index.ts  tsconfig.json
quickjs/: Cargo.toml  build.rs
quickjs/quickjspp/: quickjs.c  quickjs.h
quickjs/src/: lib.rs  quickjs.rs  quickjs_ffi.rs
