[package]
name = "quickjs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"



[build-dependencies]
csbindgen = "1.7.4"
cc = "1"
bindgen = "0.64.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csbindgen = "1.7.4"